stack the mountain to make sure it remains directly behind the ground

--- a/styles.css
+++ b/styles.css
@@ -31,7 +31,8 @@ body {
     background: linear-gradient(rgb(203, 241, 228), rgb(80, 183, 255));    
     position: absolute;
     transform: skew(0deg, 44deg);
-    border: 2px solid black; 
+    border: 2px solid black;
+    z-index: 2; 
 }
 
 
